--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,18 +21,29 @@
     "babel-preset-es2017": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "firebase-tools": "^3.17.7",
-    "lerna": "^2.9.0"
+    "lerna": "^2.9.0",
+    "redux-immutable-state-invariant": "^2.1.0"
   },
   "dependencies": {
     "babel-runtime": "^6.26.0",
+    "firebase": "^4.12.0",
     "firebase-admin": "^5.11.0",
     "firebase-functions": "^0.9.0",
     "jss": "^9.8.1",
     "material-ui": "next",
-    "next": "5.0.1-canary.16",
+    "next": "^5.0.0",
+    "next-redux-wrapper": "^1.3.5",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-jss": "^8.3.5"
+    "react-jss": "^8.3.5",
+    "react-redux": "^5.0.7",
+    "react-redux-firebase": "^2.0.5",
+    "redux": "^3.7.2",
+    "redux-firebase": "^0.3.3",
+    "redux-firestore": "^0.3.2",
+    "redux-form": "^7.3.0",
+    "redux-thunk": "^2.2.0",
+    "remote-redux-devtools": "^0.5.12"
   }
 }
